2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* lib/batik-all.jar
	  lib/js.jar
	  lib/pdf-transcoder.jar
	  lib/xml-apis-ext.jar
	  lib/xml-apis.jar:
	  	switch to the new batik svn version, because of
		some changes in the pdf-transcoder.jar.

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* src/de/intevation/printlayout/LayoutFrame.java:
		added icons for the toggle buttons.

2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		added dummy menu entries for scale bar and text. triggers
		"not implemented yet" warnings.

	* src/de/intevation/printlayout/i18n/messages.properties,
	  src/de/intevation/printlayout/i18n/messages_de.properties:
		added messages for menu entries and warning

2007-01-22  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		The Batik PrintTranscoder scales and translates the
		whole document down to the printable area of the
		selected printer. To compensate this effect an
		inverse affine transform is concatenated to the
		printers Graphics2D context before it is handed
		over to the PrintTranscoder.

	* src/de/intevation/printlayout/LayoutFrame.java,
	  src/de/intevation/printlayout/tools/OnScreenBox.java:
		removed needless imports.

2007-01-22  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		- add full extend, zoom step in/out buttons to toolbar
		- store last directory used in file choosers.

2007-01-22  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* src/de/intevation/printlayout/I18N.java:
		added two methods to get a label and a mnemonic key
		from a bundle string.

	* src/de/intevation/printlayout/LayoutFrame.java:
		added hotkeys to the menu of this frame.
	
	* src/de/intevation/printlayout/i18n/messages_de.properties:
		added '&'s to the messages to mark the hotkeys.
