@@ -1,5 +1,11 @@
 2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
 	
+	* src/de/intevation/printlayout/LayoutFrame.java:
+		changed the text of the toogle buttons
+		to tooltiptext.
+
+2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
+	
 	* lib/batik-all.jar
 	  lib/js.jar
 	  lib/pdf-transcoder.jar
